[gd_scene load_steps=13 format=3 uid="uid://cy7hnsibedn0j"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_1plui"]
[ext_resource type="PackedScene" uid="uid://ysudxhafxrwn" path="res://Scenes/scene_switch.tscn" id="2_1b7xy"]
[ext_resource type="PackedScene" uid="uid://brgx0q665pc8p" path="res://Assets/knife.tscn" id="2_rl7at"]
[ext_resource type="Script" path="res://Scripts/weapon_manager.gd" id="2_u8527"]
[ext_resource type="PackedScene" uid="uid://ciu2heutvdiua" path="res://Imports/temp potato cannon/temp_potato_cannon.glb" id="3_7o1mt"]
[ext_resource type="PackedScene" uid="uid://bi4qvl7xsrc8w" path="res://Imports/temp shotgun/temp_shotgun.glb" id="4_j38vk"]
[ext_resource type="PackedScene" uid="uid://fpvy554lb0md" path="res://Imports/temp mg/temp_machine_gun.glb" id="5_ccppv"]
[ext_resource type="PackedScene" uid="uid://nqt6o4mxust3" path="res://Imports/temp grappling gun/temp_grappling_gun.glb" id="6_6fp6b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4vxfi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_818dt"]
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hytrv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6k5qs"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_1plui")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4vxfi")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("CapsuleShape3D_818dt")
disabled = true

[node name="player_mesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_hytrv")
skeleton = NodePath("../standing_collision_shape")

[node name="collision_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
target_position = Vector3(0, 2, 0)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="head" type="Node3D" parent="neck"]

[node name="player_camera" type="Camera3D" parent="neck/head"]

[node name="grapple_cast" type="RayCast3D" parent="neck/head"]
target_position = Vector3(0, 0, -60)

[node name="weapon_cast" type="RayCast3D" parent="neck/head"]
target_position = Vector3(0, 0, -500)

[node name="weapon_manager" type="Node3D" parent="neck/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.555852, -0.66727, -0.924067)
script = ExtResource("2_u8527")

[node name="knife_holder" type="Node3D" parent="neck/head/weapon_manager"]
transform = Transform3D(-3.0598e-08, 0, -0.7, 0, 0.7, 0, 0.7, 0, -3.0598e-08, 0.000384748, -0.0168746, 0.234583)
visible = false

[node name="knife_timer" type="Timer" parent="neck/head/weapon_manager/knife_holder"]
one_shot = true

[node name="Knife" parent="neck/head/weapon_manager/knife_holder" instance=ExtResource("2_rl7at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.417013, 0.00232923, 0)

[node name="cannon_holder" type="Node3D" parent="neck/head/weapon_manager"]
visible = false

[node name="temp_potato_cannon" parent="neck/head/weapon_manager/cannon_holder" instance=ExtResource("3_7o1mt")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -0.587754)

[node name="shotgun_holder" type="Node3D" parent="neck/head/weapon_manager"]
visible = false

[node name="temp_shotgun" parent="neck/head/weapon_manager/shotgun_holder" instance=ExtResource("4_j38vk")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.0577219, -0.302753)

[node name="mg_holder" type="Node3D" parent="neck/head/weapon_manager"]
visible = false

[node name="temp_machine_gun" parent="neck/head/weapon_manager/mg_holder" instance=ExtResource("5_ccppv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.147658)

[node name="grap_gun_holder" type="Node3D" parent="neck/head/weapon_manager"]
visible = false

[node name="temp_grappling_gun" parent="neck/head/weapon_manager/grap_gun_holder" instance=ExtResource("6_6fp6b")]

[node name="checkpoint_detector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="checkpoint_detector"]
shape = SubResource("CapsuleShape3D_6k5qs")

[node name="crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="center" type="Control" parent="crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="center dot" type="Line2D" parent="crosshair/center"]
scale = Vector2(1.12349, 1)
points = PackedVector2Array(0.001, 0, 0, 0)
width = 2.5
begin_cap_mode = 2
end_cap_mode = 2

[node name="right_line" type="Line2D" parent="crosshair/center"]
position = Vector2(3, 0)
points = PackedVector2Array(5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.5

[node name="bottom_line" type="Line2D" parent="crosshair/center"]
position = Vector2(0, 3)
rotation = 1.57079
points = PackedVector2Array(5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.5

[node name="left_line" type="Line2D" parent="crosshair/center"]
position = Vector2(-3, 0)
rotation = 3.14159
points = PackedVector2Array(5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.5

[node name="top_line" type="Line2D" parent="crosshair/center"]
position = Vector2(0, -3)
rotation = -1.57079
points = PackedVector2Array(5, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.5

[node name="scene_switch" parent="." instance=ExtResource("2_1b7xy")]

[connection signal="timeout" from="neck/head/weapon_manager/knife_holder/knife_timer" to="." method="_on_knife_timer_timeout"]
